--- a/site/index.html
+++ b/site/index.html
@@ -35,7 +35,9 @@
         </div>
       </div>
 
-      <div id="map" class="map"></div>
+      <div id="map" class="map">
+        <div class="legend" id="legend" aria-live="polite"></div>
+      </div>
 
       <div class="footer">
         Data sources: NOAA NDBC (buoys) + NOAA CO-OPS (tides). Updated hourly.
