ui: simplify map header
Remove the publisher label and regional subtitle for embeds.

--- a/site/index.html
+++ b/site/index.html
@@ -17,8 +17,7 @@
     <div class="app">
       <div class="topbar">
         <div class="title">
-          <div class="kicker">San Francisco Examiner</div>
-          <div class="headline">Surf conditions (SF + Marin)</div>
+          <div class="headline">Surf conditions</div>
         </div>
 
         <div class="controls">
